# fastapi-admin-tutorial

./: pyproject.toml  server.py
src/: main.py  models.py  resources.py  routes.py
src/templates/: dashboard.html
