[tool.poetry]
name = "fastapi-admin-tutorial"
version = "0.1.0"
description = ""
authors = ["soymsk <soy.msk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi-admin = "^1.0.4"
fastapi = "^0.79.0"
aioredis = "^2.0.1"
aiomysql = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
